[package]
name = "image-convert"
version = "0.10.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/image-convert"
homepage = "https://magiclen.org/image-convert"
keywords = ["image", "interlacing", "resize", "imagemagick", "conversion"]
categories = ["multimedia::images", "multimedia::encoding"]
description = "A high level library for image identification, conversion, interlacing and high quality resizing."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
regex = "1.5"
once_cell = "1.8"
str-utils = "0.1.5"
enum-ordinalize = "3.1.10"
ico = "0.1"
magick_rust_015_dep = { package = "magick_rust", version = "0.15", optional = true }


[features]
default = ["none-background", "magick_rust"]
none-background = []

magick_rust = ["magick_rust_015"]
magick_rust_015 = ["magick_rust_015_dep"]
